fix title and x spacing

--- a/src/app/components/shared/modal/modal.component.scss
+++ b/src/app/components/shared/modal/modal.component.scss
@@ -30,6 +30,19 @@ a:visited {
 .modal-header {
   display: flex;
   justify-content: center;
+  align-items: center;
+  position: relative;
+
+  h2 {
+    margin: 0;
+    flex: 1;
+    text-align: center;
+  }
+
+  .close {
+    position: absolute;
+    right: 0;
+  }
 }
 
 .modal-body {
